--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -28,11 +28,11 @@
     "    <h2>Introduction </h2>\n",
     "    <p>\n",
     "\n",
-    "The dataset is built from the data collection of learners' interactions during an 1-hour online course on a general topic.\n",
+    "The dataset is built from the data collection of learners' information and interactions during a 1-hour online course that is on the topic of the brain and intended for a general audience.\n",
     "The dataset contains 2 classes, fail or pass, referring to whether a student had the average course grade or more or not.\n",
     "\n",
-    "References and credits: \n",
-    "Coming soon...\n",
+    "References: \n",
+    "[Project repository and documentation]( https://github.com/melinaverger/ed_project)\n",
     " <br>\n",
     "\n",
     "</div>"
